상단바 fixed, 영화 카드 flex-wrap css 추가

--- a/static/style.css
+++ b/static/style.css
@@ -10,7 +10,11 @@ body {
 /* 상단바 */
 .menu-bar {
   background-color: rgb(167, 30, 30);
-  height: 50px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+
+  z-index: 1;
 }
 
 /* 로고 */
@@ -24,14 +28,13 @@ body {
 .menu-search {
   width: 38px;
   height: 38px;
-
   border: 2px solid black;
-
   float: right;
   margin-right: 25px;
   margin-top: 4px;
 }
 
+/* 상단바의 검색 버튼 호버 */
 .menu-search:hover {
   background-color: rgb(244, 244, 244);
 }
@@ -39,14 +42,11 @@ body {
 /* 배경 */
 .background {
   color: white;
-
   height: 380px;
-
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
   background-image: linear-gradient(
       0deg,
       rgba(0, 0, 0, 0.1),
@@ -72,10 +72,8 @@ body {
 .input {
   width: 250px;
   height: 40px;
-
   border: 2px solid rgb(0, 0, 0);
   border-radius: 20px;
-
   margin-left: 30px;
   margin-top: 20px;
   padding-left: 20px;
@@ -89,10 +87,8 @@ body {
 /* 검색 버튼 */
 .btn {
   height: 30px;
-
   border: 2px solid #000000;
   border-radius: 20px;
-
   margin-left: 15px;
 }
 
@@ -104,39 +100,37 @@ body {
 /* 닫기 버튼 */
 .close-btn {
   height: 30px;
-
   border: 2px solid #000000;
   border-radius: 20px;
-
   margin-left: 10px;
 }
 
+/* 닫기 버튼 호버 */
 .close-btn:hover {
   border: 3px solid #000000;
 }
 
 /* movie-card를 감싸주는 movie */
 #movie {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr; /* !!! */
-
-  /* background-color: rgba(255, 253, 238, 0.699); */
+  flex-wrap: wrap; /* 반응형 */
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  /* grid-template-columns: 1fr 1fr 1fr; */
 }
 
 /* 영화 카드 */
 .movie-card {
+  flex-wrap: wrap;
   background-color: rgb(186, 33, 33);
-
   width: 350px;
-  height: 730px;
-
+  height: 740px;
   display: flex;
   flex-direction: column;
   align-items: center;
-
   border-radius: 10px;
-
-  margin: 60px auto 10px auto;
+  margin: 50px;
   padding-top: 20px;
 }
 
@@ -144,7 +138,6 @@ body {
 .movie-card:hover {
   background-color: rgb(54, 54, 54);
   color: #cccccc;
-
   transform: scale(1.03);
   transition: all 0.5s ease;
 }
@@ -156,6 +149,7 @@ body {
   padding: 20px 10px 10px 10px;
 }
 
+/* 영화 제목 */
 .movie-title {
   font-size: 23px;
   margin-right: 15px;
